[package]
name = "native-token"
version = "0.1.0"
edition = "2021"


[dependencies]
borsh = "1.5.7"
solana-program = "2.2.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2", features = ["no-entrypoint"] }
mpl-token-metadata = "5.1.0"

[lib]
crate-type = ["cdylib", "lib"]

