[package]
name = "escrow"
version = "0.1.0"
edition = "2021"
authors = ["arjun  <@4rjunc>"]

[dependencies]
borsh = "1.5.7"
solana-program = "2.3.0"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-2022 = {version = "9.0.0", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]
