[package]
name = "anchor-nft-metaplex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_nft_metaplex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
borsh = "0.9.3"
borsh-derive = "0.9.3"
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
solana-program = "=1.18.26"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"] }
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
